# auto-clean

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  setup.sh
data/: sample.csv  sample.xlsx
notebooks/: s3_loader.ipynb
src/: cleaner.py  config.py  excel_profiler.py  loader.py  profiler.py  reporter.py  s3.py
templates/: report.html
