[project]
name = "auto-clean"
version = "1.0.0"
description = "Automated data cleaning and profiling tool"
requires-python = ">=3.10"

dependencies = [
    "pandas>=2.0",
    "typer>=0.9",
    "jinja2>=3.0",
    "rich>=13.0",
    "openpyxl>=3.1",
    "scipy>=1.11",
    "pyyaml>=6.0",
    "xlrd>=2.0",
    "boto3>=1.34",
    "jupyterlab>=4.0",
]